--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -49,15 +49,9 @@
 
     .main-content {
         padding-top: 20px;
-        //background-color: #FFF;
 
         .search-content {
             @include fullWidthBg($bg3);
-            /*.tabpanel {
-                div.row {
-                    margin-bottom: 15px;
-                }
-            }*/
         }
 
         .header-part {
@@ -83,9 +77,6 @@
                 letter-spacing: 1px;
                 margin-bottom: 30px;
                 @media screen and (max-width: $screen-xs-max) {
-                    // overflow: hidden;
-                    // white-space: nowrap; /* Don't forget this one */
-                    // text-overflow: ellipsis;
                     display: none;
                 }
             }
@@ -159,7 +150,6 @@
                 font-weight: $regular;
                 font-size: 1.2em;
                 letter-spacing: 1px;
-                // height: 40px;
                 line-height: 40px;
                 margin: 0;
                 position: relative;
@@ -181,7 +171,6 @@
                     background-color: white;
                     border: 0; border-radius: 0;
                     box-sizing: border-box;
-
                     font-family: $font-second;
                     font-weight: $regular;
                     font-size: 1.2em;
@@ -210,7 +199,6 @@
                 span.caret {
                     width: 12px;height: 8px;
                     background: url(../img/icon-chevron-down.png) no-repeat center center;
-
                     position: absolute;
                     top: 18px; right: 25px;
                     padding: 0;margin: 0;
@@ -248,32 +236,22 @@
             }
             img {
                 display: block;
-                //TEST
-                //width: auto;height: auto;
-                //margin: 0 auto;
+                width: auto;height: auto;
+                margin: 0 auto;
                 min-height: 0;
                 max-height: none;
-                //TEST
-                //width: 100%;
-                height: 220px;
-                width: 220px;
-                margin-left: 15px;
-                @media screen and (max-width: $screen-xs-max) {
-                    width: 110px;
-                    height: 124px;                    
-                }
+                width: 100%;
             }
 
             .rating {
                 font-size: 1.2em;
                 letter-spacing: 2px;
-
+                width: 120px;
                 .note {
                     font-family: $font-main;
                     color:$red;
                     font-size: 1.4em;
                     font-weight: $semiBold;
-                    margin-left: 5px;
                     span {
                         font-size: 1.43em;
                     }
@@ -284,28 +262,43 @@
                     letter-spacing: 1px;
                     float:left;
                 }
+
+                @media screen and (min-width: $screen-xs-max) {
+                    float: right;
+                }
                 @media screen and (max-width: $screen-xs-max) {
-                    top: -120%;
-                    right: 3%;
+                    width: 100%;
                     a {
-                        color: white;
                         font-weight: $semiBold;
                         font-size: 1.2em;
                     }
+                    .star {
+                        background-size: 100%;
+                        width: 16px;
+                        height: 16px;
+                        margin-right: 2px;
+                    }
+                    .pull-right {
+                        font-size: 1.3em !important;
+                        float: none !important;     
+                    }
+                    .visible-xs {
+                        display: inline-block !important;
+                    }
                 }
+                
             }
             .inline-promo {
                 @media screen and (max-width: $screen-xs-max) {
                     display: none;
                 }
                 text-align: left;
-                //width: 100%;
-                //margin: 8px 0;
                 line-height: 34px;
                 font-size: 1.6em;
-                    font-weight: $regular;
-                    color: $promo-color;
-                    display: block;
+                font-weight: $regular;
+                color: $promo-color;
+                display: block;
+
                 .icon-promo {
                     margin-right: 10px;
                 }
@@ -314,10 +307,13 @@
                 }
             }
             div.address-bloc {
-                //TEST
-                /*@media screen and (min-width: $screen-sm-min) {
-                    min-height: 108px;
-                }*/
+                .main-infos {
+                    width: calc(100% - 120px);
+                    float: left;
+                    @media screen and (max-width: $screen-xs-max) {
+                        width: 100%;
+                    }
+                }
                 h3 {
                     font-size: 2.1em;
                     margin: 0 0 3px;
@@ -327,7 +323,6 @@
                     margin-top: 3px;
                 }
                 div {
-                    //overflow: auto;
                     padding: 0;
                 }
                 @media screen and (max-width: $screen-xs-max) {
@@ -335,11 +330,15 @@
                         letter-spacing: 0px;
                         padding-left: 0px;
                         padding-right: 0px;
-                        font-size: 0.9em;
+                        font-size: 1em;
+                        font-weight: $regular;
                         text-transform: none;
                     }
                     a:nth-child(2) {
                         font-size: 1.6em;
+                        &:not(.pull-right) {
+                            line-height: 10px;
+                        }
                     }
                 }
             }
@@ -347,9 +346,8 @@
             .btn-red, .btn-book {
                 text-transform: uppercase;
                 letter-spacing: 1px;
-                //font-weight: $semiBold;
-                font-size: 1.2em;
-                //TEST
+                font-weight: $light;
+                font-size: 1.9em;
                 @media screen and (max-width: $screen-xs-max) {
                     margin: 0;
                 }
@@ -404,54 +402,91 @@
             }
         }
         .tab-pane#salons, .tab-pane#adom {
+            .row {
+                margin: 0;
+                &:first-child {
+                    @media screen and (min-width: $screen-sm-min) {
+                        margin-top: 10px;                        
+                    }
+                }
+            }
             a.extend-search {
                 font-weight: 400;
                 font-size: 1.5em;
             }
+            .business-result {
+                margin-left: 0; margin-right: 0;
+                margin-bottom: 20px;
+                background-color: white;
+                padding: 15px;
+                height: 250px; 
+                @media screen and (max-width: $screen-xs-max) {
+                    padding: 16px 10px;
+                    height: 156px;
+                    margin-bottom: 0px;
+                    border-bottom: 1px solid $grey;
+                }
+            }
             .image-bloc {
                 display: inline-block;
                 float: left;
-                width: 230px;
+                width: 220px;
                 @media screen and (max-width: $screen-xs-max) {
                     width: 110px;
                 }
                 overflow: hidden;
+                img {
+                    display: block;
+                    min-height: 0;
+                    max-height: none;
+                    height: 220px;
+                    width: 220px;
+                    @media screen and (max-width: $screen-xs-max) {
+                        width: 110px;
+                        height: 124px;                    
+                }
+            }
             }
             .info-bloc {
                 display: inline-block;
+                position: relative;
                 float: left;
-                margin-left: -15px;
                 height: 220px;
-                width: calc(100% - 250px);
-                @media screen and (max-width: $screen-xs-max) {
-                    height: 220px;
-                    width: calc(100% - 100px);
-                    //TEST
-                    /*position: absolute;
-                    left: 33.3%;
-                    height: 100%;*/
-
-                    .book {
-                        bottom: 0px;
-                        position: absolute;
-                    }
+                width: calc(100% - 240px);
+                margin-left: 20px;
+                .book {
+                    bottom: 0px;
+                    position: absolute;
                 }
-
                 @media screen and (max-width: $screen-xs-max) {
+                    height: 124px;
+                    width: calc(100% - 130px);
                     padding-left: 0;
                     padding-right: 0;
-                    //padding-top: 15px;
                     font-size: 0.8em;
                     .btn-red, .btn-book {
                         display: block;
-                        //TEST
-                        //float:none;
-                        //margin:0 auto;
-                        padding-right: 0;
+                    }
+                    p {
+                        float: left;
+                        font-size: 1.6em;
+                    }
+                    .numHairfies {
+                        margin-left: 20px;
+                        i:before {
+                            content: " ";
+                            background: url(../img/icons/mobile/hairfie.svg) no-repeat center center;
+                            width: 15px;
+                            height: 15px;
+                            position: absolute;
+                            margin-left: -15px;
+                            //top: -5px;
+                        }
                     }
 
                 }
             }
+
         }
         .tab-pane#hairfies {
             section {
@@ -479,7 +514,6 @@
         padding-top: 20px;
         padding-bottom: 60px;
         background: $bg3;
-        // @include fullWidthBg($bg3);
         @media screen and (max-width: $screen-xs-max) {
             padding-top: 0;
         }
