text vertical align in download section

--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -561,6 +561,17 @@ section.home-section {
     .btn-apple {
      //width: 204px;
     }
+
+    .container {
+        display: table-cell;
+        height: 400px;
+        vertical-align: middle;
+        padding-left: 134.5px;
+        
+        h2 {
+            padding-top: 0;
+        }
+    }
 }
 #home section.seo {
     a {
