--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11332,7 +11332,8 @@ section.how .row > div {
     margin-bottom: 20px;
     background-color: white;
     padding: 15px;
-    height: 250px; }
+    height: 250px;
+    cursor: pointer; }
     @media screen and (max-width: 767px) {
       #content.search .main-content .tab-pane#salons .business-result, #content.search .main-content .tab-pane#adom .business-result {
         padding: 16px 10px;
