--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13229,16 +13229,50 @@ section.how .row > div {
   width: 100%; }
 
 .connect-form {
+  border: 1px solid #dfdfdf;
   padding-top: 1px;
   margin-top: 15px;
   margin-bottom: 75px;
   background-color: #FFFFFF; }
+  .connect-form div.nav {
+    margin: 0px -15px; }
+    .connect-form div.nav a {
+      border-bottom: 1px solid #dfdfdf;
+      padding: 20px 0px;
+      display: inline-block;
+      text-align: center;
+      color: #a9aeb1; }
+      .connect-form div.nav a:first-child {
+        border-right: 1px solid #dfdfdf; }
+      .connect-form div.nav a.active p.link-style {
+        color: #fe5b5f; }
+      .connect-form div.nav a.active:after {
+        content: " ";
+        height: 5px;
+        width: 100%;
+        background-color: #fc5a5f;
+        position: absolute;
+        top: -5px;
+        left: 0;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px; }
+      .connect-form div.nav a p {
+        font-size: 1.3em;
+        font-weight: bolder; }
+        .connect-form div.nav a p.link-style {
+          text-decoration: underline; }
+      .connect-form div.nav a:focus, .connect-form div.nav a:hover {
+        color: #a9aeb1;
+        text-decoration: none; }
+  .connect-form h2, .connect-form h4 {
+    text-align: center;
+    font-size: 1.3em;
+    color: #a9aeb1;
+    font-weight: bolder; }
   .connect-form h2 {
-    text-align: center;
-    font-size: 2.5em; }
+    margin: 35px 0px 20px 0px; }
   .connect-form h4 {
-    text-align: center;
-    color: #D8D8D8; }
+    margin: 3px 0px 30px 0px; }
   .connect-form a.green, .connect-form p.red {
     text-align: center;
     width: 100%;
@@ -13248,15 +13282,6 @@ section.how .row > div {
   @media screen and (max-width: 767px) {
     .connect-form {
       margin-top: 115px; } }
-  .connect-form span.separator {
-    width: 100%;
-    height: 1px;
-    border-color: #D8D8D8;
-    border-width: 1px;
-    border-style: solid;
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 10px; }
   .connect-form a.full {
     display: block;
     width: 100%;
