--- a/public/scss/partials/_auth-form.scss
+++ b/public/scss/partials/_auth-form.scss
@@ -1,11 +1,56 @@
 .connect-form {
-	h2 {
+	border: 1px solid $grey2;
+	div.nav {
+		margin: 0px -15px;
+		a {
+			border-bottom: 1px solid $grey2;
+			&:first-child {
+				border-right: 1px solid $grey2;
+			}
+			&.active {
+				p.link-style {
+					color: $hairfie;
+				}
+				&:after {
+					content: " ";
+				    height: 5px;
+				    width: 100%;
+				    background-color: #fc5a5f;
+				    position: absolute;
+				    top: -5px;
+				    left: 0;
+				    border-top-left-radius: 2px;
+				    border-top-right-radius: 2px;
+				}
+			}
+			padding: 20px 0px;
+			display: inline-block;
+			text-align: center;
+			p {
+				font-size: 1.3em;
+    			font-weight: bolder;
+				&.link-style {
+					text-decoration: underline;
+				}
+			}
+			color: $grey3;
+			&:focus, &:hover {
+				color: $grey3;
+				text-decoration: none;
+			}
+		}
+	}
+	h2, h4 {
 		text-align: center;
-		font-size: 2.5em;
+		font-size: 1.3em;
+		color: $grey3;
+		font-weight: bolder;
+	}
+	h2 {
+		margin: 35px 0px 20px 0px;
 	}
 	h4 {
-		text-align: center;
-		color: #D8D8D8;
+		margin: 3px 0px 30px 0px;
 	}
 	a.green, p.red {
 		text-align: center;
@@ -21,16 +66,6 @@
 	}
 	margin-bottom: 75px;
 	background-color: #FFFFFF;
-	span.separator {
-		width: 100%;
-		height: 1px;
-		border-color: #D8D8D8;
-		border-width: 1px;
-		border-style: solid;
-		display: block;
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
 	a.full {
 		display: block;
 		width: 100%;
