--- a/public/scss/partials/_buttons.scss
+++ b/public/scss/partials/_buttons.scss
@@ -96,44 +96,28 @@ span.arrow-right {
 }
 div.connect-button {
     div span {
-        display: block;
-        text-align: center;
+        display: inline-block;
         color: white;
         font-size: 1.8em;
-        padding-top: 14px;
-        padding-left: 60px;
+        &:not(.socicon) {
+            padding-top: 14px;
+        }
+        &.socicon {
+            font-size: 2.5em;
+            position: absolute;
+            left: 25px;
+            top: 12px;
+        }
     }
     .facebook {
+        position: relative;
+        text-align: center;
         cursor: pointer;
         border-radius: 5px;
         overflow: hidden;
         height: 60px;
         margin: 10px;
         background-color: $facebook-bg;
-        &:before {
-            content: " ";
-            background: url(../img/facebook@2x.png) no-repeat center center;
-            position: absolute;
-            width: 60px;
-            height: 60px;
-            margin-left: 5px;
-        }
-    }
-    .twitter {
-        cursor: pointer;
-        border-radius: 5px;
-        overflow: hidden;
-        height: 60px;
-        margin: 10px;
-        background-color: $twitter-bg;
-        &:before {
-            content: " ";
-            background: url(../img/twitter@2x.png) no-repeat center center;
-            position: absolute;
-            width: 60px;
-            height: 60px;
-            margin-left: 5px;
-        }
     }
 }
 .btn-frame, .btn-frame-blue, .btn-frame-red, .btn-frame-yellow, .btn-frame-green, .btn-frame-orange, .btn-frame-darkgrey {
