--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -21,7 +21,7 @@ $font-main: 'Source Sans Pro', sans-serif;
 $light: 200;$regular: 400;$semiBold: 600;
 $font-second: 'Lato', sans-serif;
 $latoLight: 300; $latoBold: 700;
-$facebook-bg: #6686D0;
+$facebook-bg: #6980B0;
 $twitter-bg: #14C4F8;
 $hairfie: #fe5b5f;
 $book: #00B0B9;
