--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -56,6 +56,7 @@ body {
 @import "partials/select";
 @import "partials/emailModal";
 @import "partials/page-write-review";
+@import "partials/page-newsletter";
 
 //Bastien CSS work
 @import "partials/auth-form";
