--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8810,20 +8810,20 @@ div.connect-button div span {
   color: white;
   font-size: 1.8em; }
   div.connect-button div span:not(.socicon) {
-    padding-top: 14px; }
+    padding-top: 10px; }
   div.connect-button div span.socicon {
     font-size: 2.5em;
     position: absolute;
     left: 25px;
-    top: 12px; }
+    top: 7px; }
 
 div.connect-button .facebook {
   position: relative;
   text-align: center;
   cursor: pointer;
-  border-radius: 5px;
+  border: 1px solid #dfdfdf;
   overflow: hidden;
-  height: 60px;
+  height: 50px;
   margin: 10px;
   background-color: #6980B0; }
 
@@ -9470,9 +9470,7 @@ p.inline-promo {
 
 input[type="checkbox"]:not(:checked),
 input[type="checkbox"]:checked {
-  position: absolute;
-  left: -9999px;
-  z-index: 9999; }
+  display: none; }
 
 input[type="checkbox"] + span {
   position: relative;
@@ -13366,75 +13364,81 @@ section.how .row > div {
         border-top-left-radius: 2px;
         border-top-right-radius: 2px; }
       .connect-form div.nav a p {
-        font-size: 1.3em;
+        font-size: 1.5em;
         font-weight: bolder; }
         .connect-form div.nav a p.link-style {
           text-decoration: underline; }
       .connect-form div.nav a:focus, .connect-form div.nav a:hover {
         color: #a9aeb1;
         text-decoration: none; }
+  .connect-form div.connect-button .facebook {
+    margin: 0px 25px; }
   .connect-form h2, .connect-form h4 {
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1.5em;
     color: #a9aeb1;
     font-weight: bolder; }
   .connect-form h2 {
-    margin: 35px 0px 20px 0px; }
+    margin: 15px 0px 20px 0px; }
   .connect-form h4 {
-    margin: 3px 0px 30px 0px; }
-  .connect-form a.green, .connect-form p.red {
+    margin: 5px 0px 30px 0px; }
+  .connect-form a.forgot-password, .connect-form p.red {
     text-align: center;
     width: 100%;
     display: block;
     font-size: 1.5em;
-    margin-bottom: 10px; }
+    margin-bottom: 40px; }
+  .connect-form a.forgot-password {
+    color: black;
+    text-decoration: underline;
+    outline: none; }
   @media screen and (max-width: 767px) {
     .connect-form {
       margin-top: 115px; } }
   .connect-form a.full {
     display: block;
-    width: 100%;
-    height: 65px;
+    height: 50px;
     text-transform: uppercase;
     border-radius: 0;
-    margin: 0;
     font-weight: 600;
     letter-spacing: 2px;
-    line-height: 50px;
-    left: 0px;
-    position: absolute; }
+    line-height: 40px;
+    margin: 0px 25px 20px; }
   .connect-form form.form div.form-group {
-    margin: 10px;
-    margin-left: 25px;
-    margin-right: 25px; }
+    margin: 10px 25px 15px; }
     .connect-form form.form div.form-group input.form-control {
-      background-color: #E6E6E6;
-      height: 60px;
+      background-color: white;
+      height: 50px;
       padding-left: 30px;
-      padding-right: 30px; }
+      padding-right: 30px;
+      border-radius: 0; }
     .connect-form form.form div.form-group div.infos a {
       font-size: 1.2em;
       font-weight: 400; }
     .connect-form form.form div.form-group label.radio-inline {
-      width: 100%;
-      line-height: 30px;
+      margin-right: 10px;
       height: 30px;
       font-size: 1.4em;
       color: #595959; }
       .connect-form form.form div.form-group label.radio-inline input {
-        height: 30px;
         background-color: white;
         border: 1px solid #eeeeee;
-        line-height: 30px;
         margin-bottom: 10px; }
-  .connect-form form.form .register-checkbox {
+  .connect-form form.form p {
+    margin-left: 25px;
+    font-size: 1.5em;
+    font-weight: bolder; }
+  .connect-form form.form label.register-checkbox {
+    margin-left: 4px;
     font-weight: 400;
     padding-left: 40px;
     padding-bottom: 15px;
-    font-size: 1.4em; }
-    .connect-form form.form .register-checkbox label {
-      color: #595959; }
-    .connect-form form.form .register-checkbox a {
+    font-size: 1.4em;
+    color: #b0b0b0; }
+    .connect-form form.form label.register-checkbox span:before {
+      border: 1px solid #b0b0b0;
+      box-shadow: none; }
+    .connect-form form.form label.register-checkbox a {
       color: darkblue; }
   .connect-form form.form .uploadFile {
     display: block;
