--- a/public/scss/partials/_buttons.scss
+++ b/public/scss/partials/_buttons.scss
@@ -100,22 +100,22 @@ div.connect-button {
         color: white;
         font-size: 1.8em;
         &:not(.socicon) {
-            padding-top: 14px;
+            padding-top: 10px;
         }
         &.socicon {
             font-size: 2.5em;
             position: absolute;
             left: 25px;
-            top: 12px;
+            top: 7px;
         }
     }
     .facebook {
         position: relative;
         text-align: center;
         cursor: pointer;
-        border-radius: 5px;
+        border: 1px solid $grey2;
         overflow: hidden;
-        height: 60px;
+        height: 50px;
         margin: 10px;
         background-color: $facebook-bg;
     }
