--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11277,6 +11277,11 @@ section.how .row > div {
         font-size: 1.6em; }
         #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2):not(.pull-right) {
           line-height: 10px; } }
+    @media screen and (max-width: 374px) {
+      #content.search .main-content .tab-pane section div.address-bloc a {
+        font-size: 0.8em; }
+      #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
+        font-size: 1.2em; } }
     #content.search .main-content .tab-pane section .btn-red, #content.search .main-content .tab-pane section .btn-book {
       text-transform: uppercase;
       letter-spacing: 1px;
@@ -12813,6 +12818,10 @@ section.how .row > div {
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); }
+    @media screen and (max-width: 350px) {
+      #content.reservation.bookingForm .btn-red, .bookingForm.review-confirmation .btn-red, #content.reservation.bookingForm .btn-book, .bookingForm.review-confirmation .btn-book {
+        width: 90%;
+        font-size: 1.5em; } }
 
 #content.reservation.confirmation .row input.registration, .confirmation.review-confirmation .row input.registration {
   width: 60%;
