--- a/public/scss/partials/_page-newsletter.scss
+++ b/public/scss/partials/_page-newsletter.scss
@@ -6,7 +6,7 @@
     background-color: white;
     margin-top: 5%;
     font-size: 1.2em;
-    padding: 5% 5% 5% 10%;
+    padding: 5% 10% 5% 10%;
     margin-bottom: 10%;
     h3 {
         color: $hairfie;
@@ -20,15 +20,6 @@
         font-family: $font-second;
         li {
             margin-left: 40px;
-            /*&:before {
-                content: " ";
-                width: 15px;
-                height: 25px;
-                background: url(../img/sign-checkbox.png) no-repeat center center;
-                background-size: contain;
-                position: absolute;
-                left: 35px;
-            }*/
             .glyphicon {
                 font-size: 0.7em;
                 color: $hairfie;
@@ -39,21 +30,37 @@
         font-size: 1.5em;
         color: $hairfie;
     }
-    @media screen and (max-width: $screen-xs-max) {
-        margin-top: 10%;
-    }
+    
     .success {
         border: 1px solid $green;
         border-radius: 2px;
         padding: 10px;
         font-size: 1.6em;
         color: $green;
-        display: inline;
+        display: inline-block;
         margin-left: 15px;
     }
-    .btn-red {
-        text-transform: uppercase;
-        border-radius: 0;
-        font-size: 1em;
+    @media screen and (max-width: $screen-xs-max) {
+        margin-top: 10%;
+        .success { 
+            margin-top: 30px;
+        }
+        h3 {
+            font-size: 1.8em;
+            letter-spacing: 0;  
+        }
+        p {
+            font-size: 1.5em;
+        }
+        ul {
+            font-size: 1.2em;
+        }
+        .newsletter-legend {
+            font-size: 1.6em !important;
+            line-height: 25px;
+        }
+        .spam-note {
+            font-size: 1.3em;
+        }
     }
 }
